<?xml version="1.0"?>
<package format="2">
  <name>sphero_bringup</name>
  <version>1.0.0</version>
  <description>The sphero_bringup package contains launch files for the planar 3DoF sphero robot</description>

  <maintainer email="sagarw10@uncc.edu">Saurav Agarwal</maintainer>
  <license>GPLv3</license>
  <url type="repository">https://github.com/AgarwalSaurav/RMP_ROS_tutorials</url>

  <author email="sagarw10@uncc.edu">Saurav Agarwal</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>urdf</exec_depend>

</package>
