<?xml version="1.0"?>
<package format="2">
  <name>sphero_operations</name>
  <version>1.0.0</version>
  <description>The sphero_operations package contains files to move the sphero robot</description>

  <maintainer email="sagarw10@uncc.edu">Saurav Agarwal</maintainer>
  <license>GPLv3</license>
  <url type="repository">https://github.com/AgarwalSaurav/RMP_ROS_tutorials</url>

  <author email="sagarw10@uncc.edu">Saurav Agarwal</author>
  <author>Sayantan Datta</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

</package>
