<?xml version="1.0"?>
<package format="2">
  <name>rviz_path</name>
  <version>1.0.0</version>
  <description>The rviz_path package is used to visualize a robot path in rviz</description>

  <maintainer email="sagarw10@uncc.edu">Saurav Agarwal</maintainer>
  <license>GPLv3</license>
  <url type="repository">https://github.com/AgarwalSaurav/RMP_ROS_tutorials</url>

  <author email="sagarw10@uncc.edu">Saurav Agarwal</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
  </export>

</package>
